force-app/main/default/objects/Flow__c/Flow__c.object-meta.xml
<CustomObject>
    <description>Transition flow for any applciation purpose</description>
    <label>Flow</label>
    <nameField>
        <displayFormat>Flow-{00000}</displayFormat>
        <label>Flow Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>