force-app/main/default/objects/Flow__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <description>Parent salesforce ID, which is linked</description>
    <inlineHelpText>Parent salesforce ID, which is linked</inlineHelpText>
    <label>Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>