force-app/main/default/objects/Flow__c/fields/Flow__c.field-meta.xml
<CustomField>
    <fullName>Flow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to link the sub flow to flow</description>
    <inlineHelpText>Used to link the sub flow to flow</inlineHelpText>
    <label>Flow</label>
    <referenceTo>Flow__c</referenceTo>
    <relationshipLabel>Sub Flows</relationshipLabel>
    <relationshipName>SubFlows</relationshipName>
    <type>Lookup</type>
</CustomField>