force-app/main/default/objects/Flow__c/fields/FlowName__c.field-meta.xml
<CustomField>
    <fullName>FlowName__c</fullName>
    <description
  >Unique flow name used identify the flow and sub flow</description>
    <inlineHelpText
  >Unique flow name used identify the flow and sub flow</inlineHelpText>
    <label>Flow Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>