force-app/main/default/objects/Flow__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>Extra note for flow</description>
    <inlineHelpText>Extra note for flow</inlineHelpText>
    <label>Note</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>