force-app/main/default/objects/Flow__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>Used to store external request generated</description>
    <inlineHelpText>Used to store external request generated</inlineHelpText>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>