force-app/main/default/objects/Flow__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>Used to store external response generated</description>
    <inlineHelpText>Used to store external response generated</inlineHelpText>
    <label>Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>