force-app/main/default/objects/Flow__c/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <description>Provider Name or Integration Name</description>
    <inlineHelpText>Provider Name or Integration Name</inlineHelpText>
    <label>Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>