force-app/main/default/objects/Flow__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Used to identify the current flow status</description>
    <inlineHelpText>Used to identify the current flow status</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FlowStatus</valueSetName>
    </valueSet>
</CustomField>