force-app/main/default/objects/Flow__c/recordTypes/Flow.recordType-meta.xml
<RecordType>
    <fullName>Flow</fullName>
    <active>true</active>
    <description>Parent flow record type</description>
    <label>Flow</label>
</RecordType>