force-app/main/default/objects/Flow__c/recordTypes/SubFlow.recordType-meta.xml
<RecordType>
    <fullName>SubFlow</fullName>
    <active>true</active>
    <description>Sub flow record type</description>
    <label>SubFlow</label>
</RecordType>