force-app/main/default/objects/Flow__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>   
    <columns>Entity__c</columns>
    <columns>Flow__c</columns>
    <columns>FlowName__c</columns>
    <columns>Note__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>ServiceName__c</columns>
    <columns>Status__c</columns>
     <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>